Closed Bug 1146293 Opened 10 years ago Closed 10 years ago

[bluetooth2] Fix coding style break(intent and maximum line length) introduced by Bug 1117172 and Bug 1145631

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox39 fixed)

RESOLVED FIXED
2.2 S9 (3apr)
Tracking Status
firefox39 --- fixed

People

(Reporter: yrliou, Assigned: yrliou)

References

Details

(Whiteboard: [webbt-api])

Attachments

(1 file, 1 obsolete file)

After Bug 1117172 and Bug 1145631 landed, they break our coding style at some lines. This bug is to fix intent and line length of those lines.
Set dependency on Bug 1114515 since I implement this bug based on Bug 1114515. It would be safer to land this bug after Bug 1114515.
Depends on: 1114515
Hi Shawn, This patch is for fixing our coding style on intent and line length broke by Bug 1117172 and Bug 1145631. Please help to review my patch. Thanks, Jocelyn
Attachment #8581553 - Flags: review?(shuang)
No try server link since bluetooth2 won't be built.
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S9 (3apr)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: