Bug 1146293 - Fix coding style break (intent and line length) caused by Bug 1117172 and Bug 1145631. r=shuang