dom/bluetooth2/BluetoothGatt.h
@@ -28,7 +28,7 @@ class BluetoothSignal;
 class BluetoothValue;
 
 class BluetoothGatt final : public DOMEventTargetHelper
-                              , public BluetoothSignalObserver
+                          , public BluetoothSignalObserver
 {
 public:
   NS_DECL_ISUPPORTS_INHERITED
@@ -70,7 +70,8 @@ public:
      return GetOwner();
   }
 
-  virtual JSObject* WrapObject(JSContext* aCx, JS::Handle<JSObject*> aGivenProto) override;
+  virtual JSObject* WrapObject(JSContext* aCx,
+                               JS::Handle<JSObject*> aGivenProto) override;
   virtual void DisconnectFromOwner() override;
 
   BluetoothGatt(nsPIDOMWindow* aOwner,
